# meltnp

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture.md  brainstorming.md  future_research_directions.md  test_time_adaptation.md
results/sinusoid_robust/: weights.pt
results/sinusoid_vanilla/: weights.pt
scripts/: generate_presentation.py  main.py  run.py  sweep.py  test_time_adapt.py  train.py  tta_budget.py  visualize.py
src/np_shift/: __init__.py  benchmark.py  calibration.py  data.py  experiment.py  neural_process.py  test_time.py  transfer.py  viz.py
tests/: test_import.py
