[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural-processes-distribution-shift"
version = "0.1.0"
description = "Research-first uv scaffold for Neural Processes under distribution shift."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2",
    "torch>=2.7",
    "matplotlib>=3.10",
    "scikit-learn>=1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "python-pptx>=1.0.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
